# xs-unreal-MCP

./: .gitignore  .mcp.all.json.example  .mcp.json.example  LICENSE  README.md  THIRD_PARTY_NOTICES.md
docs/: EXTENDED-TOOLS.md  SETUP.md  TOOL-REFERENCE.md  UE57-GOTCHAS.md  VALIDATION.md
patches/: macrographs-composite-support.patch
scripts/: audit_public_package.py  check_profiles.py  check_slim_tools.py  live_validate_unreal.py  validate_extended_tool_matrix.py
server/: pyproject.toml  requirements.txt
server/xs_unreal_mcp/: __init__.py  backend.py  extended_tools.py  router.py  server.py  tools.py
skill/: SKILL.md
tools/: uebp_driver.py
